SharpTypus/Grammar/Grammar.txt
// operators
mult_op =			"*" | "/" ;
add_op =			"+" | "-" ;
unary_op =			"!" | "-" ;
eq_op =				"==" | "!=" ;
comp_op =			"<" | ">" | "<=" | ">=" ;


program =			statement* EOF ;

statement =			exprStatement ;
exprStatement =		expression ";" ;


// expressions
expression =		equality ;
equality =			comparison (eq_op comparision)* ;
comparison =		additive (comp_op additive)* ;
additive =			multiplicative (add_op multiplicative)* ;
multiplicative =	unary (mult_op unary)* ;
unary =				primary | unary_op unary ;
primary =			literal | grouping ;
grouping =			"(" expression ")" ;
literal =			INTEGER | FLOAT | STRING | "true" | "false" ;
